  Added rowColoring to EmpDept demo
  FrameworkSettings renamed to Configuration, removed get(), renamed get/setProperty to get/setValue
  All constants from FrameworkConstants move to configuration
  FrameworkConstants removed
  DateUtil created, moved date related stuff from Util, DateUtilTest created
  ClientInfo moved from common.model to common.db
  Added runtime permission to server policy file to handle some evaluation expression thing in jasper reports
  Added missing jasper collections/logging libs to server run files
  Property.EntityProperty renamed to ForeignKeyProperty
  Added compile_reports target to ant build file, along with the required libraries
  EntityModel.caption moved to EntityPanel
  EntityPanel.initialize() now calls the protected postInitialization() method, which should be overridden instead of initialize()
  Wait cursor now used while preparing reports for viewing via the EntityPanel
  EntityReportUtil.fillReport() added, called from EntityModel.fillReport()
  EntityPanel.initialize() renamed to initializePanel, initialized renamed to panelInitialized, postInitialization() renamed to initialize
  Property.is() added
  Property.DenormalizedViewProperty.referencePropertyID renamed to foreignKeyPropertyID
  Property.DenormalizedProperty.ownerEntityID renamed to foreignKeyPropertyID, changed relevant code in EntityRepository and Entity
  EntityUtil.isPrimaryKeyModified() moved to Entity
  EntityRepository.EntityInfo created
  EntityRepository refactored, transient fields removed, temporarily?
  Package framework.model renamed to framework.domain
  EntityRepository.get() removed, no longer singleton, all methods static
  IEntityDbRemoteServer.connect() now takes a map instead of a EntityRepository parameter
  EntityRepository.EntityInfo renamed to EntityDefinition, refactored
  EntityRepository.getOrderByColumnNames renamed to getOrderByClause